# Online_Store_Gozon

./: README.md  docker-compose.yml
frontend/: index.html
gateway/: nginx.conf
orders-service/: CMakeLists.txt  Dockerfile  main.cpp
payments-service/: CMakeLists.txt  Dockerfile  main.cpp
postman/: online_store.postman_collection.json
